Ensure list items have the same size as paragraphs for readability and consistency

--- a/assets/sass/health-check.scss
+++ b/assets/sass/health-check.scss
@@ -19,6 +19,16 @@ body {
 			font-size: 1rem;
 		}
 
+		ul,
+		ol {
+
+			li {
+
+				font-size: 1rem;
+				line-height: 1.5;
+			}
+		}
+
 		.wp-core-ui {
 
 			.button {
